--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,7 +59,7 @@ header {
 
 .top-wrapper {
     background: linear-gradient(-45deg, rgba(246, 255, 0, .7), rgba(255, 0, 161, .7)),
-    url(../images/garden0.png);
+    url(garden0.png);
     background-size: cover;
     text-align: center;
     padding: 180px 0;
